# DooR

./: .gitignore  .gitignore.swp  CMakeCache.txt  CMakeLists.txt  DooR  Makefile  cmake_install.cmake  core.21018  main.cpp
src/: .main.cpp.swp  door_worker.cpp  door_worker.h  main.cpp  shared_data_socket_server.cpp  shared_data_socket_server.h  socket_ack.h  unix_domain_socket_server.cpp  unix_domain_socket_server.h
